DaCapo: 21/22 pass; fused static pre-hook + EJB/Weld proxy skips + h2 3x
Four parallel opus-agent investigations:
* tradebeans/tradesoap A (JFR profile) + B (telemetry + class-load diff)
* h2o A (Java-21 version-override) + B (Java 17 instrumented JDK)

tradebeans/tradesoap — both PASS on instrumented JDK (previously hung):
* $$$view skip: JBoss classfilewriter EJB view proxies (TradeSLSBLocal$$$view1
  etc.) reflectively copy the bean's declared methods (including our
  synthetic $$crochetCopyFieldsTo) into the generated view body; re-emitting
  via FieldAdder caused ClassFormatError: Duplicate method, aborting web.war
  INSTALL and making WildFly serve 404s → harness retry loop presented as
  "hang".
* _$$_Weld skip: Weld CDI client-proxies / interceptor subclasses
  (CdiExtension$Proxy$_$$_WeldClientProxy etc.) — same duplicate-method
  story plus VerifyError: Expecting a stackmap frame.
* Injected-field visibility: ACC_PUBLIC → ACC_PRIVATE | ACC_TRANSIENT.
  Private fixes Weld's WELD-000075 on normal-scoped beans; transient
  fixes h2o's Schema.fillFromParms "Missing @API annotation" and also
  hides the bookkeeping from Java serialization.

h2 3x speedup (and secondary Logger$Level hotspot elimination) via a
fused static-field pre-hook:
* Old: StaticFieldRewriter emitted INVOKESTATIC sfHelperFor +
  INVOKEINTERFACE $$crochetAccess at every GETSTATIC/PUTSTATIC. The
  INVOKEINTERFACE against an open polymorphic SF-helper world
  defeated JIT devirtualization; org.jboss.logging.Logger$Level
  hit >8M times during tradebeans boot.
* New: CheckpointRollbackAgent.noteStaticAccess(Class) fuses both
  legs into a single INVOKESTATIC; the JIT inlines the entire fast
  path (ClassValue load + volatile field read + branch).

Telemetry (opt-in, zero-cost when off):
* TransformTracer (-Dcrochet.traceTransform=true): per-class transform
  timing to /tmp/crochet-transform-trace.log. Revealed the Logger$Level
  hotspot.
* RuntimeTracer (-Dcrochet.traceRuntime=true): per-class 